[package]
name = "sqlplus_run"
version = "0.1.0"
authors = ["potolicynam <potolicynam@tehnologia.com>"]
build = "build.rs"

[dependencies]
#sqlplus_wrap = { path = "D:/workspace/rust/sqlplus_wrap/" }

config = "*"
log = "*"
simplelog = "*"

# time-work
chrono = "*"

fs_extra = "*"
regex = "*"
encoding_rs = "*"

# gui
sciter-rs = "*"
